Changed some style names and pictures

--- a/kukkakauppa/sisakasvit.html
+++ b/kukkakauppa/sisakasvit.html
@@ -55,12 +55,12 @@
 
       <h2>Tuotteet</h2>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/howea.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Kentiapalmu (Howea forsteriana)</h3>
             <p>
               <b>Hinta: 45,90 €</b><br />
@@ -80,12 +80,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/spathiphyllum.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Viirivehka (Spathiphyllum)</h3>
             <p>
               <b>Hinta: 24,50 €</b><br />
@@ -102,12 +102,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/monstera.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Peikonlehti (Monstera deliciosa)</h3>
             <p>
               <b>Hinta: 39,90 €</b><br />
@@ -127,12 +127,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/aureum.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Kultaköynnös (Epipremnum aureum)</h3>
             <p>
               <b>Hinta: 18,90 €</b><br />
