--- a/kukkakauppa/tietoa.html
+++ b/kukkakauppa/tietoa.html
@@ -53,50 +53,95 @@
         tuotteet.
       </p>
 
-      <p>
-        Puutarhaliike Neilikka on kasvanut vuosien varrella kahden myymälän
-        ketjusta tunnetuksi ja luotetuksi puutarhanhoidon asiantuntijaksi.
-        Meille tärkeintä on asiakkaidemme tyytyväisyys ja se, että jokainen
-        löytää itselleen sopivat kasvit ja tarvikkeet oman vihreän keitaansa
-        luomiseen. Siksi panostamme korkealaatuisiin tuotteisiin, kattavaan
-        valikoimaan ja ystävälliseen asiakaspalveluun, joka takaa, että
-        puutarhaharrastuksesi on aina inspiroivaa ja palkitsevaa.
-      </p>
-
-      <div class="img-wrapper">
-        <img src="img/tietoa.jpg" />
+      <div class="flex-wrapper">
+        <div class="inner-block inner-text">
+          <p>
+            Puutarhaliike Neilikka on kasvanut vuosien varrella kahden myymälän
+            ketjusta tunnetuksi ja luotetuksi puutarhanhoidon asiantuntijaksi.
+            Meille tärkeintä on asiakkaidemme tyytyväisyys ja se, että jokainen
+            löytää itselleen sopivat kasvit ja tarvikkeet oman vihreän keitaansa
+            luomiseen. Siksi panostamme korkealaatuisiin tuotteisiin, kattavaan
+            valikoimaan ja ystävälliseen asiakaspalveluun, joka takaa, että
+            puutarhaharrastuksesi on aina inspiroivaa ja palkitsevaa.
+          </p>
+          <p>
+            Myymälöissämme järjestämme säännöllisesti työpajoja ja tapahtumia,
+            joissa opit uusimmat vinkit ja niksit kasvien hoitoon ja puutarhan
+            ylläpitoon. Tavoitteenamme on inspiroida ja tukea sinua kasvien
+            maailmassa, olitpa sitten vasta-alkaja tai kokenut viherpeukalo.
+            Tervetuloa tutustumaan myymälöihimme Helsingissä ja Espoossa –
+            teemme yhdessä ympäristöstäsi kauniimman ja vihreämmän!
+          </p>
+        </div>
+        <div class="inner-block">
+          <img src="img/tietoa.jpg" />
+        </div>
       </div>
 
-      <p>
-        Myymälöissämme järjestämme säännöllisesti työpajoja ja tapahtumia,
-        joissa opit uusimmat vinkit ja niksit kasvien hoitoon ja puutarhan
-        ylläpitoon. Tavoitteenamme on inspiroida ja tukea sinua kasvien
-        maailmassa, olitpa sitten vasta-alkaja tai kokenut viherpeukalo.
-        Tervetuloa tutustumaan myymälöihimme Helsingissä ja Espoossa – teemme
-        yhdessä ympäristöstäsi kauniimman ja vihreämmän!
-      </p>
+      <h2>Missio</h2>
+      Puutarhaliike Neilikan missio on rikastuttaa ihmisten elämää tarjoamalla
+      korkealaatuisia kasveja, puutarhatarvikkeita ja asiantuntevaa palvelua.
+      Haluamme auttaa asiakkaitamme luomaan vehreitä ja kauniita ympäristöjä
+      niin kotona kuin puutarhassa, ja tarjota heille inspiraatiota ja tukea
+      viherpeukaloksi kasvamisessa.
+
+      <h2>Visio</h2>
+      Visiomme on olla Suomen johtava puutarhamyymäläketju, joka tunnetaan
+      erinomaisesta asiakaspalvelusta, laajasta valikoimasta ja kestävistä,
+      ympäristöystävällisistä ratkaisuista. Tavoitteenamme on olla jokaisen
+      kasveista ja puutarhanhoidosta kiinnostuneen luotettu kumppani ja
+      ensimmäinen valinta kaikissa vihersisustukseen ja puutarhanhoitoon
+      liittyvissä tarpeissa.
+
+      <h2>Arvot</h2>
+      <ul>
+        <li>
+          <b>Asiakaslähtöisyys:</b> Olemme sitoutuneet tarjoamaan asiakkaillemme
+          parasta mahdollista palvelua ja räätälöityjä ratkaisuja heidän
+          yksilöllisiin tarpeisiinsa.
+        </li>
+        <li>
+          <b>Laatu:</b> Tarjoamme vain korkealaatuisia tuotteita, jotka
+          edistävät kasvien hyvinvointia ja kestävää puutarhanhoitoa.
+        </li>
+        <li>
+          <b>Ympäristöystävällisyys:</b> Pyrimme edistämään
+          ympäristöystävällisiä toimintatapoja ja kestävää kehitystä kaikessa
+          toiminnassamme.
+        </li>
+        <li>
+          <b>Inspiraatio:</b> Haluamme inspiroida asiakkaitamme luomaan kauniita
+          ja vehreitä tiloja, jotka lisäävät heidän hyvinvointiaan ja
+          elämänlaatuaan.
+        </li>
+        <li>
+          <b>Yhteisöllisyys:</b> Uskomme yhteistyöhön ja yhteisön rakentamiseen,
+          ja tuemme asiakkaitamme matkalla kohti vehreämpää ja kestävämpää
+          elämäntapaa.
+        </li>
+      </ul>
     </div>
     <footer>
       <div class="flex-wrapper">
         <div class="footer-wrapper">
-        <div class="footer-block">
-          <p class="bold">Puutarhaliike Neilikka, Helsinki</p>
-          <p>Fabianinkatu 42</p>
-          <p>00100 Helsinki</p>
-          <br />
-          <p>Puh. xx-xxxxxxx</p>
-          <p>helsinki@puutarhaliikeneilikka.fi</p>
-        </div>
-        <div class="footer-block">
-          <p class="bold">Puutarhaliike Neilikka, Espoo</p>
-          <p>Kivenlahdentie 10</p>
-          <p>01234 Espoo</p>
-          <br />
-          <p>Puh. xx-xxxxxxx</p>
-          <p>espoo@puutarhaliikeneilikka.fi</p>
+          <div class="footer-block">
+            <p class="bold">Puutarhaliike Neilikka, Helsinki</p>
+            <p>Fabianinkatu 42</p>
+            <p>00100 Helsinki</p>
+            <br />
+            <p>Puh. xx-xxxxxxx</p>
+            <p>helsinki@puutarhaliikeneilikka.fi</p>
+          </div>
+          <div class="footer-block">
+            <p class="bold">Puutarhaliike Neilikka, Espoo</p>
+            <p>Kivenlahdentie 10</p>
+            <p>01234 Espoo</p>
+            <br />
+            <p>Puh. xx-xxxxxxx</p>
+            <p>espoo@puutarhaliikeneilikka.fi</p>
+          </div>
         </div>
       </div>
-    </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
     <script>
