--- a/kukkakauppa/tyokalut.html
+++ b/kukkakauppa/tyokalut.html
@@ -55,12 +55,12 @@
 
       <h2>Tuotteet</h2>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/puutarhasakset.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Fiskars Classic -puutarhasakset</h3>
             <p>
               <b>Hinta: 24,90 €</b><br />
@@ -77,12 +77,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/kastelupistooli.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Gardena Comfort -kastelupistooli</h3>
             <p>
               <b>Hinta: 19,90 €</b><br />
@@ -98,12 +98,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/istutuslapio.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Fiskars Xact -istutuslapio</h3>
             <p>
               <b>Hinta: 14,90 €</b><br />
@@ -119,12 +119,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/talikko.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Wolf-Garten Multi-Star -talikko</h3>
             <p>
               <b>Hinta: 34,90 €</b><br />
