--- a/kukkakauppa/ulkokasvit.html
+++ b/kukkakauppa/ulkokasvit.html
@@ -55,12 +55,12 @@
 
       <h2>Tuotteet</h2>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/paeonia.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Pionit (Paeonia)</h3>
             <p>
               <b>Hinta: 29,90 €</b><br />
@@ -78,12 +78,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/lavandula.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Laventeli (Lavandula angustifolia)</h3>
             <p>
               <b>Hinta: 12,50 €</b><br />
@@ -100,12 +100,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/acer.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Japaninvaahtera (Acer palmatum)</h3>
             <p>
               <b>Hinta: 79,90 €</b><br />
@@ -122,12 +122,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/cerastium.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Hopeahärkki (Cerastium tomentosum)</h3>
             <p>
               <b>Hinta: 6,90 €</b><br />
