--- a/kukkakauppa/uutiset.html
+++ b/kukkakauppa/uutiset.html
@@ -43,12 +43,12 @@
     <div class="container">
       <h1>Uutiset</h1>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/news1.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <p>
               <b>3.7.2024</b><br />
               Puutarhakasvien karsiminen on tärkeä osa pihanhoitoa, ja nyt on
@@ -67,12 +67,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/news2.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <p>
               <b>1.6.2024</b><br />
               Onnea kaikille tänään valmistuville! Tähän erityiseen päivään
@@ -90,12 +90,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/news3.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <p>
               <b>15.2.2024</b><br />
               Kevään saapuminen on täydellinen aika uudistaa sisäkasvien
@@ -114,12 +114,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/news4.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <p>
               <b>2.1.2024</b><br />
               Hyvää uutta vuotta! Uuden vuoden kunniaksi Puutarhaliike Neilikka
@@ -138,12 +138,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/news5.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <p>
               <b>14.12.2023</b><br />
               Joulu lähestyy, ja nyt on aika luoda kotiin juhlan tunnelmaa
@@ -162,12 +162,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/news6.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <p>
               <b>1.9.2023</b><br />
               Nyt on oikea aika aloittaa puutarhan valmistelut talven lepokautta
