--- a/kukkakauppa/hoito.html
+++ b/kukkakauppa/hoito.html
@@ -55,12 +55,12 @@
 
       <h2>Tuotteet</h2>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/lannoite.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Biolan Luonnonlannoite 500ml</h3>
             <p>
               <b>Hinta: 9,90 €</b><br />
@@ -78,12 +78,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/multa.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Kekkilä Kukkamulta 10L</h3>
             <p>
               <b>Hinta: 6,50 €</b><br />
@@ -100,12 +100,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/ravinne.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Substral Nestemäinen Kasviravinne 250ml</h3>
             <p>
               <b>Hinta: 8,90 €</b><br />
@@ -122,12 +122,12 @@
         </div>
       </div>
 
-      <div class="product-wrapper">
+      <div class="outer-wrapper">
         <div class="flex-wrapper">
-          <div class="product-block">
+          <div class="inner-block">
             <img src="img/torjunta.jpg" />
           </div>
-          <div class="product-block product-text">
+          <div class="inner-block inner-text">
             <h3>Neem-öljy Tuholaistorjunta-aine 250ml</h3>
             <p>
               <b>Hinta: 14,50 €</b><br />
