Finished json-server project, updated the gardening shop project to fetch news from json server, renamed some pictures and edited styles

--- a/kukkakauppa/index.html
+++ b/kukkakauppa/index.html
@@ -66,9 +66,22 @@
 
       <h2>Uutisia</h2>
 
+      <div class="flex-wrapper"></div>
+
+      <!-- Old page content without db.json
       <div class="flex-wrapper">
         <div class="news-block">
-          <img src="img/news1.jpg" />
+          <img src="img/news10.jpg" />
+          <p class="news-date">4.9.2024</p>
+          <p>
+            Tule hankkimaan kukkasipulit kevättä varten! Meiltä löydät nyt
+            laajan valikoiman tulppaanien, narsissien, krookusten ja muiden
+            kevään kukkien sipuleita edulliseen hintaan.
+          </p>
+        </div>
+
+        <div class="news-block">
+          <img src="img/news9.jpg" />
           <p class="news-date">3.7.2024</p>
           <p>
             Puutarhakasvien karsiminen kannattaa aloittaa hyvissä ajoin! Meiltä
@@ -77,7 +90,7 @@
         </div>
 
         <div class="news-block">
-          <img src="img/news2.jpg" />
+          <img src="img/news8.jpg" />
           <p class="news-date">1.6.2024</p>
           <p>
             Onnea tänään valmistuville! Muista juhlasankareita kauniilla
@@ -86,7 +99,7 @@
         </div>
 
         <div class="news-block">
-          <img src="img/news3.jpg" />
+          <img src="img/news7.jpg" />
           <p class="news-date">15.2.2024</p>
           <p>
             Kevään lähestyessä on aika pistää kädet multaan ja hoitaa
@@ -96,7 +109,7 @@
         </div>
 
         <div class="news-block">
-          <img src="img/news4.jpg" />
+          <img src="img/news6.jpg" />
           <p class="news-date">2.1.2024</p>
           <p>
             Hyvää uutta vuotta! Uuden vuoden kunniaksi myymälöissämme upeita
@@ -112,21 +125,14 @@
             edullinen valikoima joulukuusia.
           </p>
         </div>
+      </div>
+      -->
 
-        <div class="news-block">
-          <img src="img/news6.jpg" />
-          <p class="news-date">1.9.2023</p>
-          <p>
-            Nyt on hyvä aika aloittaa puutarhan valmistelu talven lepokautta
-            varten. Meiltä löydät kaikki työkalut ja tarvikkeet.
-          </p>
-        </div>
-
-        <div class="center-block">
-          <a href="uutiset.html"><button>Näytä kaikki uutiset</button></a>
-        </div>
+      <div class="center-block">
+        <a href="uutiset.html"><button>Näytä kaikki uutiset</button></a>
       </div>
     </div>
+
     <footer>
       <div class="footer-wrapper">
         <div class="footer-block">
@@ -148,6 +154,8 @@
       </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
+
+    <script src="index.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
