--- a/kukkakauppa/uutiset.html
+++ b/kukkakauppa/uutiset.html
@@ -43,6 +43,10 @@
     <div class="container">
       <h1>Uutiset</h1>
 
+      <div class="news"></div>
+
+      <!-- Old page content without db.json
+
       <div class="outer-wrapper">
         <div class="flex-wrapper">
           <div class="inner-block">
@@ -184,6 +188,7 @@
           </div>
         </div>
       </div>
+      -->
     </div>
     <footer>
       <div class="footer-wrapper">
@@ -206,6 +211,7 @@
       </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
+    <script src="news.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
