renamed news.js to uutiset.js and added javascript validation with error messages to yhteys.html form

--- a/kukkakauppa/uutiset.html
+++ b/kukkakauppa/uutiset.html
@@ -211,7 +211,7 @@
       </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
-    <script src="news.js"></script>
+    <script src="uutiset.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
