--- a/kukkakauppa/yhteys.html
+++ b/kukkakauppa/yhteys.html
@@ -56,62 +56,79 @@
         <li>alla olevalla lomakkeella</li>
       </ul>
       <p>
-        Tavoitat meidät myös sosiaalisen
-        median kanaviemme kautta, joissa jaamme säännöllisesti ajankohtaisia
-        vinkkejä ja inspiraatiota puutarhanhoitoon. Tule käymään myymälöissämme
-        Helsingissä ja Espoossa – meiltä saat henkilökohtaista palvelua ja
-        asiantuntevaa neuvontaa kaikissa puutarha-asioissa!
+        Tavoitat meidät myös sosiaalisen median kanaviemme kautta, joissa jaamme
+        säännöllisesti ajankohtaisia vinkkejä ja inspiraatiota puutarhanhoitoon.
+        Tule käymään myymälöissämme Helsingissä ja Espoossa – meiltä saat
+        henkilökohtaista palvelua ja asiantuntevaa neuvontaa kaikissa
+        puutarha-asioissa!
       </p>
 
-      <form method="POST">
+      <form novalidate method="POST">
         <fieldset>
           <legend>Yhteydenottolomake</legend>
-          <label for="nimi" class="label-responsive">Nimi:</label>
-          <input
-            type="text"
-            id="nimi"
-            name="nimi"
-            pattern="[A-ZÅÄÖa-zåäö \-']{2,}"
-            required
-          /><br />
-
-          <label for="sahkoposti" class="label-responsive">Sähköposti:</label>
-          <input
-            type="email"
-            id="sahkoposti"
-            name="sahkoposti"
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-            required
-          /><br /><br />
-
-          <label for="aihe" class="label-additional">Aihe:</label>
-          <select id="aihe" name="aihe" required>
-            <option value="" disabled selected>Valitse</option>
-            <option value="tuotekysymys">Kysymys tuotteista</option>
-            <option value="tilaus">Tilaus</option>
-            <option value="yhteydenotto">Yhteydenottopyyntö</option>
-            <option value="muu">Muu</option></select
+          <label class="label-responsive"
+            >Nimi:
+            <input
+              type="text"
+              id="nimi"
+              name="nimi"
+              pattern="[A-ZÅÄÖa-zåäö \-']{2,}"
+              required
+            />
+            <span class="error" aria-live="polite"></span> </label
           ><br />
 
-          <label for="viesti" class="label-additional">Viesti:</label><br />
-          <textarea
-            id="viesti"
-            name="viesti"
-            pattern="[^<>]{3,500}"
-            required
-            rows="4"
-            cols=""
-          ></textarea
+          <label class="label-responsive"
+            >Sähköposti:
+            <input
+              type="email"
+              id="sahkoposti"
+              name="sahkoposti"
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+              required
+            />
+            <span class="error" aria-live="polite"></span> </label
           ><br /><br />
-          <label for="uutiskirje" class="label-additional"
-            >Haluan tilata Puutarhaliike Neilikan uutiskirjeen</label
+
+          <label class="label-additional"
+            >Aihe:
+            <select id="aihe" name="aihe" required>
+              <option value="" disabled selected>Valitse</option>
+              <option value="tuotekysymys">Kysymys tuotteista</option>
+              <option value="tilaus">Tilaus</option>
+              <option value="yhteydenotto">Yhteydenottopyyntö</option>
+              <option value="muu">Muu</option>
+            </select>
+            <span class="error" aria-live="polite"></span></label
           ><br />
-          <p class="label-wrapper">
-            <input type="radio" id="kylla" name="uutiskirje" value="kylla" checked/>
-            <label for="kylla">Kyllä</label><br />
-            <input type="radio" id="ei" name="uutiskirje" value="ei" />
-            <label for="ei">Ei</label>
-          </p>
+
+          <label class="label-additional"
+            >Viesti:<br />
+            <textarea
+              id="viesti"
+              name="viesti"
+              required
+              rows="4"
+              cols=""
+            ></textarea>
+            <span class="error" aria-live="polite"></span></label
+          ><br /><br />
+
+          <label class="label-additional"
+            >Haluan tilata Puutarhaliike Neilikan uutiskirjeen<br />
+            <p class="label-wrapper">
+              <input
+                type="radio"
+                id="kylla"
+                name="uutiskirje"
+                value="kylla"
+                checked
+              />
+              <label for="kylla">Kyllä</label><br />
+              <input type="radio" id="ei" name="uutiskirje" value="ei" />
+              <label for="ei">Ei</label>
+            </p>
+          </label>
           <br />
 
           <input type="submit" value="Lähetä" />
@@ -139,6 +156,7 @@
       </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
+    <script src="yhteys.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
