created nav.js to mark the active page and included uutiset.html to nav

--- a/kukkakauppa/uutiset.html
+++ b/kukkakauppa/uutiset.html
@@ -29,6 +29,7 @@
         </li>
         <li><a href="myymalat.html">Myymälät</a></li>
         <li><a href="tietoa.html">Tietoa Meistä</a></li>
+        <li><a href="uutiset.html">Uutiset</a></li>
         <li><a href="yhteys.html">Yhteydenotto</a></li>
       </ul>
     </nav>
@@ -212,6 +213,7 @@
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
     <script src="uutiset.js"></script>
+    <script src="nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
