--- a/kukkakauppa/index.html
+++ b/kukkakauppa/index.html
@@ -29,6 +29,7 @@
         </li>
         <li><a href="myymalat.html">Myymälät</a></li>
         <li><a href="tietoa.html">Tietoa Meistä</a></li>
+        <li><a href="uutiset.html">Uutiset</a></li>
         <li><a href="yhteys.html">Yhteydenotto</a></li>
       </ul>
     </nav>
@@ -156,6 +157,7 @@
     </footer>
 
     <script src="index.js"></script>
+    <script src="nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
