--- a/kukkakauppa/tuotteet.html
+++ b/kukkakauppa/tuotteet.html
@@ -29,6 +29,7 @@
         </li>
         <li><a href="myymalat.html">Myymälät</a></li>
         <li><a href="tietoa.html">Tietoa Meistä</a></li>
+        <li><a href="uutiset.html">Uutiset</a></li>
         <li><a href="yhteys.html">Yhteydenotto</a></li>
       </ul>
     </nav>
@@ -146,6 +147,7 @@
     </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
+    <script src="nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
