--- a/kukkakauppa/yhteys.html
+++ b/kukkakauppa/yhteys.html
@@ -29,6 +29,7 @@
         </li>
         <li><a href="myymalat.html">Myymälät</a></li>
         <li><a href="tietoa.html">Tietoa Meistä</a></li>
+        <li><a href="uutiset.html">Uutiset</a></li>
         <li><a href="yhteys.html">Yhteydenotto</a></li>
       </ul>
     </nav>
@@ -157,6 +158,7 @@
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
     <script src="yhteys.js"></script>
+    <script src="nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
