created a new folder for scripts and moved the js files there

--- a/kukkakauppa/index.html
+++ b/kukkakauppa/index.html
@@ -156,8 +156,8 @@
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
 
-    <script src="index.js"></script>
-    <script src="nav.js"></script>
+    <script src="script/index.js"></script>
+    <script src="script/nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
