--- a/kukkakauppa/yhteys.html
+++ b/kukkakauppa/yhteys.html
@@ -157,8 +157,8 @@
       </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
-    <script src="yhteys.js"></script>
-    <script src="nav.js"></script>
+    <script src="script/yhteys.js"></script>
+    <script src="script/nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
