--- a/kukkakauppa/myymalat.html
+++ b/kukkakauppa/myymalat.html
@@ -110,7 +110,7 @@
       </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
-    <script src="nav.js"></script>
+    <script src="script/nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
