--- a/kukkakauppa/tuotteet.html
+++ b/kukkakauppa/tuotteet.html
@@ -147,7 +147,7 @@
     </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
-    <script src="nav.js"></script>
+    <script src="script/nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
