--- a/kukkakauppa/uutiset.html
+++ b/kukkakauppa/uutiset.html
@@ -212,8 +212,8 @@
       </div>
       <p>Copyright &copy; 2024 Puutarhaliike Neilikka</p>
     </footer>
-    <script src="uutiset.js"></script>
-    <script src="nav.js"></script>
+    <script src="script/uutiset.js"></script>
+    <script src="script/nav.js"></script>
     <script>
       function toggleMenu() {
         const navLinks = document.getElementById("navLinks");
